--- a/docs/Content/Project/2022.rst
+++ b/docs/Content/Project/2022.rst
@@ -6,3 +6,4 @@
    :caption: These are some highlight projects I have done in 2022.
 
    2022/kano-and-yoshii-river
+   2022/cambodia-flood-frequency
